# DiscordMusicBee

./: .gitignore  CMakeLists.txt  README.md
assets/: icon.res  resources.qrc
lib/MusicBeeIPC_plugin/: README.txt
lib/MusicBeeIPC_src/: About.Designer.cs  About.cs  Enums.cs  Helper.cs  IPCInterface.cs  MusicBeeInterface.cs  Plugin.cs  TypeSize.cs  WinApi.cs  mb_IPC.csproj  mb_IPC.sln  todo.txt
lib/MusicBeeIPC_src/IPC/: Pack.cs  SharedMemoryMgr.cs  Unpack.cs
lib/MusicBeeIPC_src/Properties/: AssemblyInfo.cs
lib/MusicBeeIPC_src/Structs/: FloatInt.cs  LRUShort.cs
src/: convert_icon.py  music_bee.cpp  musicbee_ipc.cpp  musicbee_ipc.h
